Updated documentation to include Maven.